<resources>
    <string name="app_name">StarWarsTrivia</string>
    <!--    Page names-->
    <string name="title_people">People</string>
    <string name="title_species">Species</string>
    <string name="title_planets">Planets</string>
    <string name="title_starships">Starships</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="title_detailed_view">Detailed View</string>
    <string name="title_login">Login</string>z
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>